--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@blinkdotnew/sdk": "^0.18.7",
     "@google/genai": "^1.26.0",
+    "@supabase/supabase-js": "^2.90.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.553.0",
